bin/testsuite/tests/compiler/src/errors/compiler2169.swg
#global testerror "Err0494"

func toto()->{[2] x: s32}
{
    return {666}
}
